first usable version

--- a/resources.qrc
+++ b/resources.qrc
@@ -22,9 +22,11 @@
         <file>qml/images/zoomin.png</file>
         <file>qml/images/zoomout.png</file>
         <file>qml/images/createmultianswerchoices.png</file>
-        <file>qml/images/ok.png</file>        
+        <file>qml/images/ok.png</file>
         <file>example.html</file>
         <file>qml/images/qt-logo.png</file>
-        <file>qml/texteditor.js</file>        
+        <file>qml/texteditor.js</file>
+        <file>qml/images/combobox_logo.png</file>
+        <file>qml/images/arrow-right.png</file>        
     </qresource>
 </RCC>
